# AdvancedStatistics

./: Cargo.toml  LICENSE_2.txt
examples/: examples.rs  normal_example.rs  t_test.rs
src/: Samples.rs  configuration.rs  distribution_trait.rs  domain.rs  errors.rs  euclid.rs  hypotesys.rs  hypothesis.rs  lib.rs  mixed_distribution.rs
src/distributions/: Bernoulli.rs  Beta.rs  Binomial.rs  ChiSquared.rs  Degenerate.rs  Dirac.rs  DiscreteUniform.rs  Exponential.rs  F.rs  Gamma.rs  Geometric.rs  Normal.rs  Poisson.rs  StudentT.rs  Uniform.rs  distribution_interface.rs  distribution_trait.rs  mod.rs
tests/: distribution_tests.rs  general.rs  integration_tests.rs  mod.rs  parameter_estimation.rs  simulation_study.rs  statistical_tests.rs
